groups/flowDefinitions/objects/TW1_Extrato__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Caixa__c</fullName>
        <label>Caixa</label>
        <referenceTo>TW1_Caixa__c</referenceTo>
        <relationshipName>Estratos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Data__c</fullName>
        <label>Data</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ValorAbertura</fullName>
                </value>
                <value>
                    <fullName>ValorBrinde</fullName>
                </value>
                <value>
                    <fullName>ValorFechamento</fullName>
                </value>
                <value>
                    <fullName>ValorEstorno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Extrato</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Número do Estrato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>